# immerse-yourself

./: .gitattributes  .gitignore  ATTRIBUTION.md  CLAUDE.md  LICENSE  Makefile  README.md  sonar-project.properties
.claude/: settings.json
.githooks/: post-commit  pre-push
devlog/: 2023_01_05_devlog.txt  2023_01_07_devlog.txt  2023_01_08_devlog.txt  2023_01_20_devlog.txt  2023_01_21_devlog.txt  2023_03_31_devlog.txt  2023_05_19_devlog.txt  2023_06_02_devlog.txt  2023_10_27_devlog.txt  2024_03_01_devlog.txt  2025_01_17_devlog.txt  2025_12_20_devlog.txt  2026_01_02_devlog.txt  2026_01_03_devlog.txt  2026_01_04_devlog.txt  2026_01_05_devlog.txt  2026_01_06_devlog.txt  2026_01_07_devlog.txt  2026_01_08_devlog.txt  2026_01_09_devlog.txt  2026_01_14_devlog.txt  2026_01_24_devlog.txt  2026_01_28_devlog.txt  2026_02_03_devlog.txt  2026_02_04_devlog.txt  2026_02_05_devlog.txt  2026_02_06_devlog.txt  2026_02_09_COMMERCIALIZATION_ASSESSMENT.md  2026_02_09_devlog.txt  2026_02_10_devlog.txt  2026_02_11_devlog.txt  2026_02_12_devlog.txt  2026_02_13_devlog.txt  2026_02_14_devlog.txt  2026_02_17_devlog.txt  2026_02_18_devlog.txt  2026_02_19_devlog.txt  2026_02_20_devlog.txt  2026_02_21_devlog.txt  2026_02_22_devlog.txt
docs/: ROADMAP.md
env_conf/: README.md  battle_environment.yaml  beach.yaml  blacksmith.yaml  cafe.yaml  (+18 more)
rust/: Cargo.toml  README.md
rust/immerse-core/: Cargo.toml  README.md
rust/immerse-core/src/: download_queue.rs  error.rs  ffi.rs  lib.rs
rust/immerse-core/src/config/: README.md  loader.rs  mod.rs  types.rs  validator.rs
rust/immerse-core/src/engines/: README.md  atmosphere.rs  audio_output.rs  lights.rs  mod.rs  sound.rs  spotify.rs
rust/immerse-tauri/: Cargo.toml  README.md  tauri.conf.json
rust/immerse-tauri/src/: README.md  commands.rs  lib.rs  main.rs  state.rs
rust/immerse-tauri/ui/: README.md  index.html  package-lock.json  package.json
rust/immerse-tauri/ui/src/: App.tsx
rust/immerse-tauri/ui/src/components/: CategorySidebar.tsx  DebugLogPanel.tsx  EnvironmentButton.tsx  EnvironmentGrid.tsx  LightingPreviewWidget.tsx  NowPlayingWidget.tsx  README.md  SearchBar.tsx  SettingsDialog.tsx  StatusBar.tsx  StopButtons.tsx  TimeOfDayBar.tsx  TimeVariantDialog.tsx  TopBar.tsx  VolumeSlider.tsx
rust/immerse-tauri/ui/src/contexts/: ThemeContext.tsx
rust/immerse-tauri/ui/src/data/: attribution.json
rust/immerse-tauri/ui/src/hooks/: README.md  useAppState.ts  useAttribution.ts
rust/immerse-tauri/ui/src/styles/: globals.css
rust/immerse-tauri/ui/src/types/: index.ts
rust/immerse-tauri/ui/src/utils/: sceneColors.ts
(+30 files in other folders)
