[workspace]
members = ["immerse-core", "immerse-tauri"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Pete"]
license = "MIT"

# Optimize all dependencies even in debug builds.
# Audio decoding (symphonia, rodio, etc.) is 100x slower without this.
[profile.dev.package."*"]
opt-level = 2

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
oauth2 = "4"
rand = "0.8"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
