[package]
name = "immerse-tauri"
version = "0.2.0"
edition = "2021"
authors = ["Pete"]
license = "MIT"
description = "Tauri-based desktop app for Immerse Yourself ambient environment system"

[lib]
name = "immerse_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
immerse-core = { path = "../immerse-core" }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
configparser = "3"
rand = { workspace = true }
